# langshift

./: .trunk.yaml  Cargo.toml  README.md  index-dfbddbbcb59cb2fc.css  index.html  index.js  langshift-54d88d2bf8e58495_bg.wasm  langshift-a26a31be7f360ec6.js  langshift-a26a31be7f360ec6_bg.wasm  langshift-d62b96325fea61cc_bg.wasm
.github/workflows/: pages.yml
src/: abrams_strogatz.rs  diaz_switkes.rs  lib.rs  main.rs
